--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,15 @@ services:
     volumes:
     - ./:/data
 
+  grafana:
+    image: grafana/grafana
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    depends_on:
+      - es
+
 volumes:
   es-storage:
   grafana-storage:
